more work on proposal

--- a/doc/dissertation/content/introduction/purpose.tex
+++ b/doc/dissertation/content/introduction/purpose.tex
@@ -23,8 +23,8 @@ smooth - in the presence of shocks, the PDE form breaks down
 \cite{leveque2002}\refsec{11.6}. Thus it becomes necessary to work with these
 equations in a weak form, which holds in the presence of shocks.  However, the
 mathematical formulations for these problems do not necessarily yield unique
-weak solutions; this is a manifestation of the lack of some physics in the
-underlying hyperbolic PDE model \cite{leveque2002}\refsec{11.13}.
+weak solutions; this is a manifestation of the omission of some physics in the
+approximate hyperbolic PDE model \cite{leveque2002}\refsec{11.13}.
 
 %Attempts to address these issues have taken a number
 %of different approaches for different discretization schemes.
