--- a/doc/proposal/conclusions.tex
+++ b/doc/proposal/conclusions.tex
@@ -1,4 +1,21 @@
-These are my conclusions.
+Preliminary results show that the developed entropy-based FCT scheme
+is effective at preventing the formation of spurious oscillations and
+negativities; however, even with discrete LED criterion satisfied, it is
+possible to generate spurious plateaus. While the monotonicity property is
+not guaranteed, positivity preservation is guaranteed. For scalar conservation laws,
+the theoretical understanding
+is greater, and a discrete maximum principle can be proved and enforced
+on the FCT solution; this has been demonstrated for the scalar radiation
+transport model. Results indicate that Galerkin FCT may show superior
+results to entropy-based FCT in some cases; however, in general it is
+necessary to use the entropy-based scheme to ensure convergence to the
+entropy solution.
+Some convergence studies have been performed for the scalar case and
+demonstrate the expected spatial convergence rates.
+
+Goals that remain include improvement of the FCT scheme for systems,
+
+
     \begin{itemize}
       \item Positivity-preserving
       \item Discrete-maximum-principle preserving
