--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -69,9 +69,9 @@
 \newcommand{\celldiameter}{\Delta x}
 \newcommand{\maxcelldiameter}{\Delta x_{\text{max}}}
 \newcommand{\volume}{V}
-\newcommand{\dvolume}{d\volume}
+\newcommand{\dvolume}{\,d\volume}
 \newcommand{\area}{A}
-\newcommand{\darea}{d\area}
+\newcommand{\darea}{\,d\area}
 \newcommand{\testfunction}{\varphi}
 \newcommand{\vectortestfunctionscalar}{\Phi}
 \newcommand{\vectortestfunction}{\mathbf{\vectortestfunctionscalar}}
