minor changes to proposal

--- a/doc/dissertation/content/results/transport/void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/void_to_absorber/description.tex
@@ -109,22 +109,22 @@ Entropy Time Integrator & BE\\
    \begin{subfigure}{0.3\textwidth}
       \includegraphics[width=\textwidth]
         {\contentdir/results/transport/void_to_absorber/GalFCT.png}
-      \caption{Galerkin with FCT}
+      \caption{Galerkin FCT}
    \end{subfigure}
    \begin{subfigure}{0.3\textwidth}
       \includegraphics[width=\textwidth]
         {\contentdir/results/transport/void_to_absorber/low.png}
-      \caption{Low-order}
+      \caption{Low-Order}
    \end{subfigure}
    \begin{subfigure}{0.3\textwidth}
       \includegraphics[width=\textwidth]
         {\contentdir/results/transport/void_to_absorber/EV.png}
-      \caption{Entropy Viscosity}
+      \caption{Entropy-Based}
    \end{subfigure}
    \begin{subfigure}{0.3\textwidth}
       \includegraphics[width=\textwidth]
         {\contentdir/results/transport/void_to_absorber/EVFCT.png}
-      \caption{Entropy Viscosity with FCT}
+      \caption{Entropy-Based FCT}
    \end{subfigure}
    \caption{Comparison of Solutions for 2-D Void-to-Absorber Test Problem}
    \label{fig:void_to_absorber_2D}
