--- a/doc/proposal/proposal.tex
+++ b/doc/proposal/proposal.tex
@@ -3,6 +3,8 @@
 \geometry{verbose,tmargin=1in,bmargin=1in,lmargin=1in,rmargin=1in}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{booktabs} % for different rule commands such as \toprule
+\usepackage{graphicx} % for including graphics
 \usepackage{subcaption}
 \usepackage[hidelinks]{hyperref}
 
