--- a/doc/proposal/results.tex
+++ b/doc/proposal/results.tex
@@ -1,3 +1,7 @@
 This section gives some preliminary results. The methods described
 in Section \ref{sec:methodology} have been implemented using the
 \texttt{deal.II} finite element library\cite{dealii}.
+
+\input{\contentdir/results/transport/mms/description}
+
+\input{\contentdir/results/transport/void_to_absorber/description}
