--- a/doc/proposal/fct_scheme.tex
+++ b/doc/proposal/fct_scheme.tex
@@ -1,1 +1,116 @@
-FCT
+\begin{itemize}
+   \item Recall that FCT defines antidiffusive correction fluxes
+      from a low-order, monotone scheme to a high-order scheme. Calling
+      these fluxes $\correctionfluxvector$, this gives
+      \begin{equation}
+        \lumpedmassmatrix\frac{\solutionvector^{H,n+1}-\solutionvector^n}{\dt}
+          + (\ssmatrix+\diffusionmatrix^L)\solutionvector^n = \ssrhs^n
+          + \correctionfluxvector \eqp
+      \end{equation}
+   \item Subtracting the high-order scheme equation from this gives the
+      definition of $\correctionfluxvector$:
+      \begin{equation}
+        \correctionfluxvector \equiv
+          -(\consistentmassmatrix-\lumpedmassmatrix)
+          \frac{\solutionvector^{H,n+1}-\solutionvector^n}{\dt}
+          + (\diffusionmatrix^L-\diffusionmatrix^{H,n})\solutionvector^n \eqp
+      \end{equation}
+   \item Decomposing $\correctionfluxvector$ into internodal fluxes
+      $\correctionfluxij$ such that $\sum_j \correctionfluxij =
+      \correctionfluxletter_i$, where $\Delta_{j,i}[\mathbf{y}]$
+      denotes $y_j - y_i$:
+   \begin{equation}
+     \correctionfluxij = -M\ij^C\Delta_{j,i}\left[
+       \frac{\solutionvector^{H,n+1}-\solutionvector^n}{\Delta t}\right]
+       + (D\ij^L-D\ij^{H,n})\Delta_{j,i}[\solutionvector^n] \eqp
+   \end{equation}
+   \item Recall that the objective of FCT is to limit these antidiffusive
+      fluxes to enforce some physical bounds.
+   \item The chosen bounds take the form of the DMP satisfied by the
+      low-order scheme:
+      \begin{equation}
+         W_i^-\leq
+         U_i^{n+1}\leq
+         W_i^+\qquad\forall i \eqp
+      \end{equation}
+   \item This is achieved by applying a limiting coefficient $L\ij$ to each
+      internodal flux $\correctionfluxij$:
+      \begin{equation}
+        \lumpedmassmatrix\frac{\solutionvector^{n+1}-\solutionvector^n}{\dt}
+          + \ssmatrix^L\solutionvector^n = \ssrhs
+          + \limitermatrix\cdot\correctionfluxmatrix \eqp
+      \end{equation}
+   \item Each limiting coefficient is between zero and unity: $0\leq L\ij\leq 1$.
+   \begin{itemize}
+      \item If all $L\ij$ are zero, then the low-order scheme is produced.
+      \item If all $L\ij$ are one, then the high-order scheme is produced.
+   \end{itemize}
+   \item The enforced bounds can be rearranged to bound the limited flux sums:
+      \begin{equation}
+         Q^-_i \leq \sum\limits_j L\ij \correctionfluxij \leq Q^+_i \eqc
+      \end{equation}
+      where $Q_i^\pm$ has the following definition:
+      \begin{equation}
+         Q_i^\pm \equiv M_{i,i}^L\frac{W_i^\pm-U_i^n}{\Delta t}
+         + \sum\limits_j A_{i,j}^L U_j^n - b_i \eqp
+      \end{equation}
+   \item The classic Zalesak limiting strategy starts by separating the
+      negative and positive fluxes:
+      \begin{equation}
+         Q^-_i \leq \sum\limits_{j:\correctionfluxij<0} L\ij \correctionfluxij +
+            \sum\limits_{j:\correctionfluxij>0} L\ij \correctionfluxij\leq Q^+_i \eqp
+      \end{equation}
+      The positive fluxes risk violating $Q_i^+$, and the negative fluxes risk
+      violating $Q_i^-$.
+   \item Zalesak's limiting coefficients assume that
+      all positive fluxes into a node $i$ have the same limiting coefficient
+      $L^+_i$ and similarly, negative fluxes have the same limiting coefficient
+      $L^-_i$:
+      \begin{equation}
+        Q^-_i \leq L^-_i \correctionfluxletter^-_i
+          + L^+_i \correctionfluxletter^+_i \leq Q^+_i \eqp
+      \end{equation}
+      where
+      \begin{equation}
+        \correctionfluxletter_i^- \equiv \sum\limits_{j:\correctionfluxij<0}
+          \correctionfluxij \eqc \qquad
+        \correctionfluxletter_i^+ \equiv \sum\limits_{j:\correctionfluxij>0}
+          \correctionfluxij \eqp
+      \end{equation}
+   \item As a conservative bound for $L^+_i$, contributions from negative fluxes
+      are ignored (pretending $L_i^-=0$), giving
+      $L^+_i \leq \frac{Q_i^+}{\correctionfluxletter_i^+}$
+      and similarly for $L^-_i$ and the lower bound.
+   \item Then, recalling that limiting coefficients are not greater than unity:
+      \begin{equation}
+         L_i^\pm \equiv\left\{
+            \begin{array}{l l}
+               1 & \correctionfluxletter_i^\pm = 0\\
+               \min\left(1,\frac{Q_i^\pm}{\correctionfluxletter_i^\pm}\right) &
+                 \correctionfluxletter_i^\pm \ne 0
+            \end{array}
+            \right. \eqp
+      \end{equation}
+   \item However, to limit fluxes conservatively, limited correction fluxes must
+      be equal and opposite:
+      \begin{equation}
+        L\ij \correctionfluxij = -L_{j,i}
+          \MakeUppercase{\correctionfluxletter}_{j,i} \eqp
+      \end{equation}
+      Since $\correctionfluxij$ happens to be skew symmetric
+      ($\MakeUppercase{\correctionfluxletter}_{j,i}=-\correctionfluxij$) due to the
+      chosen flux decomposition, the limiting coefficients must be symmetric:
+      $L_{j,i} = L\ij$.
+   \item Thus when deciding the limiting coefficient $L\ij$ for a flux $\correctionfluxij$, 
+      one must not only consider the bounds for $i$ but also the bounds for $j$.
+      Specifically, a positive flux $\correctionfluxij$ risks violating $Q_i^+$ and $Q_j^-$.
+      Putting everything together,
+      \begin{equation}
+         L\ij \equiv\left\{
+            \begin{array}{l l}
+               \min(L_i^+,L_j^-) & \correctionfluxij \geq 0\\
+               \min(L_i^-,L_j^+) & \correctionfluxij < 0
+            \end{array}
+            \right. \eqp
+      \end{equation}
+\end{itemize}
