--- a/doc/proposal/low_order_scheme.tex
+++ b/doc/proposal/low_order_scheme.tex
@@ -1,1 +1,77 @@
-Low
+\begin{itemize}
+   \item To get the low-order scheme, one does the following:
+   \begin{itemize}
+      \item Lumps the mass matrix:
+        $\consistentmassmatrix\rightarrow\lumpedmassmatrix$.
+      \item Adds a low-order diffusion operator:
+        $\ssmatrix \rightarrow \ssmatrix+\loworderdiffusionmatrix$.
+   \end{itemize}
+   \item This gives the following, where $\solutionvector^{L,n+1}$ is the
+     low-order solution:
+   \begin{equation}
+      \lumpedmassmatrix\frac{\solutionvector^{L,n+1}-\solutionvector^n}{\dt}
+        + (\ssmatrix + \diffusionmatrix^L)\solutionvector^n = \ssrhs^n \eqp
+   \end{equation}
+   \item The diffusion matrix $\diffusionmatrix^L$ is assembled elementwise,
+      where $K$ denotes an element, using a local bilinear form $b_K$ and a
+      local low-order viscosity $\nu_K^L$:
+   \begin{equation}
+      D\ij^L = \sumKSij \nu_K^L b_K(\testfunction_j,\testfunction_i) \eqp
+   \end{equation}
+   \item The local bilinear form is defined as follows, where $|K|$ denotes
+      the volume of element $K$, $\mathcal{I}(K)$ is the set of indices
+      corresponding to degrees of freedom with nonempty support on $K$, and
+      $n_K$ is the cardinality of this set.
+   \begin{equation}
+      b_K(\testfunction_j, \testfunction_i) \equiv \left\{\begin{array}{l l}
+         -\frac{1}{n_K - 1}\cellvolume & i\ne j, \quad i,j\in \mathcal{I}(K)\\
+         \cellvolume                   & i = j,  \quad i,j\in \mathcal{I}(K)\\
+         0                & i\notin\mathcal{I}(K)\,|\, j\notin\mathcal{I}(K)
+      \end{array}\right. \eqp
+   \end{equation}
+   \item Some properties that result from this definition are
+   \begin{equation}
+      \sum\limits_j b_K(\testfunction_j, \testfunction_i) = 0 \eqc
+   \end{equation}
+   \begin{equation}
+      b_K(\testfunction_i, \testfunction_i) > 0 \eqp
+   \end{equation}
+   \item The low-order viscosity is defined as
+   \begin{equation}
+     \lowordercellviscosity[\timeindex] \equiv \max\limits_{i\ne j\in\indicescell}
+     \frac{\max(0,\ssmatrixletter\ij^\timeindex)}
+     {-\mkern-20mu\sumKSij[T]\mkern-20mu\localviscbilinearform{T}{j}{i}}
+     \eqp
+   \end{equation}
+   \item This definition is designed to be the smallest number such that the
+      following is guaranteed:
+   \begin{equation}
+      D^L\ij \leq -A\ij, \quad j\ne i \eqp
+   \end{equation}
+   \item This is used to guarantee that the low-order steady-state matrix
+      $\ssmatrix^L=\ssmatrix+\diffusionmatrix^L$ is an M-matrix, i.e., a \emph{monotone} matrix:
+      $\ssmatrix^L\solutionvector \ge 0\Rightarrow \solutionvector\ge 0$.
+   \item In addition to guaranteeing monotonicity and positivity, the low-order
+      viscous terms guarantee the following discrete maximum principle (DMP),
+      where $U^n_{\max,i} = \max\limits_{j\in\mathcal{I}(S_i)}U^n_j$,
+      $U^n_{\min,i} = \min\limits_{j\in\mathcal{I}(S_i)}U^n_j$:
+      \begin{equation}
+         W_i^-\leq
+         U_i^{L,n+1}\leq
+         W_i^+\qquad\forall i \eqc
+      \end{equation}
+      \begin{equation}
+         W_i^\pm \equiv U_{\substack{\max\\\min},i}^n\left(
+         1-\frac{\dt}{M_{i,i}^L}
+         \sum\limits_j A\ij^L\right)
+         + \frac{\Delta t}{M_{i,i}^L}b_i^n \eqp
+      \end{equation}
+   \item For example, when there is no reaction term or source term, this reduces
+      to the following DMP, which implies the scheme is local extremum
+      diminishing (LED):
+      \begin{equation}
+         U^n_{\min,i}\leq
+         U_i^{L,n+1}\leq
+         U^n_{\max,i}\qquad\forall i \eqp
+      \end{equation}
+\end{itemize}
