work on proposal

--- a/doc/dissertation/content/introduction/purpose.tex
+++ b/doc/dissertation/content/introduction/purpose.tex
@@ -42,7 +42,7 @@ thermodynamics, in which entropy is a non-decreasing function of time, whereas
 in mathematics, the concept of entropy is usually viewed as the opposite: it is
 a non-\emph{increasing} function of time.
 
-The FCT algorithm was introduced in 1973 by Boris and Book\cite{boris} for
+The FCT algorithm was introduced in 1973 by Boris and Book\cite{borisbook} for
 finite difference discretizations of transport problems, and it has
 recently been applied to the finite element method. The idea of FCT
 is to blend a low-order scheme that is monotone with a high-order
