--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -92,6 +92,7 @@
 
 % entropy viscosity
 \newcommand{\entropy}{\eta}
+\newcommand{\entropyflux}{\mathbf{\consfluxletter}^\eta}
 \newcommand{\entropyjump}{\mathcal{J}}
 \newcommand{\entropyresidual}{\mathcal{R}}
 \newcommand{\entropyresidualcoef}{c_\entropyresidual}
