--- a/doc/proposal/proposal.tex
+++ b/doc/proposal/proposal.tex
@@ -103,6 +103,16 @@ used.
 %###############################################################################
 \section{Methodology\label{sec:methodology}}
 %###############################################################################
+This section gives the methodology to be used in this research. As stated in
+the introduction, both scalar and systems of hyperbolic PDEs are to be
+considered. However, for brevity, this section gives only the scalar
+methodology, since the methodology is very similar for systems. As stated in the
+introduction, the FCT algorithm combines a low-order scheme and a high-order
+scheme.  Thus this section is organized as follows.  Section
+\ref{sec:low_order_scheme} gives the low-order scheme, Section
+\ref{sec:high_order_scheme} gives the high-order scheme, and Section
+\ref{sec:fct_scheme} gives the FCT scheme that blends the two schemes via the
+FCT algorithm.
 %===============================================================================
 \subsection{Low-Order Scheme\label{sec:low_order_scheme}}
 %===============================================================================
