--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -12,13 +12,51 @@
   Volume                   = {33}
 }
 
+@Article{bardos1979,
+  Title                    = {First order quasilinear equations with boundary conditions},
+  Author                   = {C. Bardos and A. Y. Leroux and J. C. Nedelec},
+  Journal                  = {Communications in Partial Differential Equations},
+  Year                     = {1979},
+  Number                   = {9},
+  Pages                    = {1017-1034},
+  Volume                   = {4},
+
+  Doi                      = {10.1080/03605307908820117},
+  Eprint                   = { http://dx.doi.org/10.1080/03605307908820117 
+},
+  Url                      = { http://dx.doi.org/10.1080/03605307908820117 
+}
+}
+
+@Article{bernetti2008,
+  Title                    = {Exact Solution of the Riemann Problem for the Shallow Water Equations with Discontinuous Bottom Geometry},
+  Author                   = {Bernetti, R. and Titarev, V. A. and Toro, E. F.},
+  Journal                  = {J. Comput. Phys.},
+  Year                     = {2008},
+
+  Month                    = mar,
+  Number                   = {6},
+  Pages                    = {3212--3243},
+  Volume                   = {227},
+
+  Acmid                    = {1343406},
+  Address                  = {San Diego, CA, USA},
+  Doi                      = {10.1016/j.jcp.2007.11.033},
+  ISSN                     = {0021-9991},
+  Issue_date               = {March, 2008},
+  Keywords                 = {Discontinuous bottom geometry, Exact Riemann solver, Shallow water equations, WAF method},
+  Numpages                 = {32},
+  Publisher                = {Academic Press Professional, Inc.},
+  Url                      = {http://dx.doi.org/10.1016/j.jcp.2007.11.033}
+}
+
 @Article{borisbook,
-  Title                    = {I. {SHASTA}, A Fluid Transport Algorithm that Works},
+  Title                    = {Flux-Corrected Transport I. {SHASTA}, A Fluid Transport Algorithm that Works},
   Author                   = {Jay P. Boris and David L. Book},
   Journal                  = {Journal of Computational Physics},
-  Year                     = {1997},
-  Pages                    = {172--186},
-  Volume                   = {135}
+  Year                     = {1973},
+  Pages                    = {38--69},
+  Volume                   = {11}
 }
 
 @InCollection{chen2013,
@@ -102,6 +140,19 @@
   Year                     = {2015}
 }
 
+@Article{kruzkov1970,
+  Title                    = {FIrst-Order Quasilinear Equations in Several Independent Variables},
+  Author                   = {S. N. Kru\v{z}kov},
+  Journal                  = {Math. USSR Sbornik},
+  Year                     = {1970},
+  Note                     = {Tom 81 (123)},
+  Number                   = {2},
+  Volume                   = {10},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.01.18}
+}
+
 @Unpublished{kuzmin_transport,
   Title                    = {A Guide to Numerical Methods for Transport Equations},
   Author                   = {D. Kuzmin},
@@ -132,11 +183,34 @@
   Timestamp                = {2016.01.13}
 }
 
+@Article{lellis2004,
+  Title                    = {Minimal entropy conditions for Burgers equation},
+  Author                   = {Camillo De Lellis and Felix Otto and Michael Westdickenberg},
+  Journal                  = {Quarterly of Applied Mathematics},
+  Year                     = { 2004 },
+  Number                   = { 4 },
+  Pages                    = {687-700},
+  Volume                   = { 62 }
+}
+
 @Book{leveque2002,
   Title                    = {Finite Volume Methods for Hyperbolic Problems},
   Author                   = {Randall J. LeVeque},
   Publisher                = {Cambridge University Press},
   Year                     = {2002}
+}
+
+@Article{panov1994,
+  Title                    = {Uniqueness of the Solution of the Cauchy Problem for a First Order Quasilinear Equation with One Admissible Strictly Convex Entropy},
+  Author                   = {E. Yu. Panov},
+  Journal                  = {Mat. Zametki},
+  Year                     = {1994},
+  Number                   = {5},
+  Pages                    = {116--129},
+  Volume                   = {55},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.01.18}
 }
 
 @Book{toro2009,
