--- a/doc/proposal/low_order_scheme.tex
+++ b/doc/proposal/low_order_scheme.tex
@@ -1,77 +1,96 @@
-\begin{itemize}
-   \item To get the low-order scheme, one does the following:
-   \begin{itemize}
-      \item Lumps the mass matrix:
-        $\consistentmassmatrix\rightarrow\lumpedmassmatrix$.
-      \item Adds a low-order diffusion operator:
-        $\ssmatrix \rightarrow \ssmatrix+\loworderdiffusionmatrix$.
-   \end{itemize}
-   \item This gives the following, where $\solutionvector^{L,n+1}$ is the
-     low-order solution:
-   \begin{equation}
-      \lumpedmassmatrix\frac{\solutionvector^{L,n+1}-\solutionvector^n}{\dt}
-        + (\ssmatrix + \diffusionmatrix^L)\solutionvector^n = \ssrhs^n \eqp
-   \end{equation}
-   \item The diffusion matrix $\diffusionmatrix^L$ is assembled elementwise,
-      where $K$ denotes an element, using a local bilinear form $b_K$ and a
-      local low-order viscosity $\nu_K^L$:
-   \begin{equation}
-      D\ij^L = \sumKSij \nu_K^L b_K(\testfunction_j,\testfunction_i) \eqp
-   \end{equation}
-   \item The local bilinear form is defined as follows, where $|K|$ denotes
-      the volume of element $K$, $\mathcal{I}(K)$ is the set of indices
-      corresponding to degrees of freedom with nonempty support on $K$, and
-      $n_K$ is the cardinality of this set.
-   \begin{equation}
-      b_K(\testfunction_j, \testfunction_i) \equiv \left\{\begin{array}{l l}
-         -\frac{1}{n_K - 1}\cellvolume & i\ne j, \quad i,j\in \mathcal{I}(K)\\
-         \cellvolume                   & i = j,  \quad i,j\in \mathcal{I}(K)\\
-         0                & i\notin\mathcal{I}(K)\,|\, j\notin\mathcal{I}(K)
-      \end{array}\right. \eqp
-   \end{equation}
-   \item Some properties that result from this definition are
-   \begin{equation}
-      \sum\limits_j b_K(\testfunction_j, \testfunction_i) = 0 \eqc
-   \end{equation}
-   \begin{equation}
-      b_K(\testfunction_i, \testfunction_i) > 0 \eqp
-   \end{equation}
-   \item The low-order viscosity is defined as
-   \begin{equation}
-     \lowordercellviscosity[\timeindex] \equiv \max\limits_{i\ne j\in\indicescell}
-     \frac{\max(0,\ssmatrixletter\ij^\timeindex)}
-     {-\mkern-20mu\sumKSij[T]\mkern-20mu\localviscbilinearform{T}{j}{i}}
-     \eqp
-   \end{equation}
-   \item This definition is designed to be the smallest number such that the
-      following is guaranteed:
-   \begin{equation}
-      D^L\ij \leq -A\ij, \quad j\ne i \eqp
-   \end{equation}
-   \item This is used to guarantee that the low-order steady-state matrix
-      $\ssmatrix^L=\ssmatrix+\diffusionmatrix^L$ is an M-matrix, i.e., a \emph{monotone} matrix:
-      $\ssmatrix^L\solutionvector \ge 0\Rightarrow \solutionvector\ge 0$.
-   \item In addition to guaranteeing monotonicity and positivity, the low-order
-      viscous terms guarantee the following discrete maximum principle (DMP),
-      where $U^n_{\max,i} = \max\limits_{j\in\mathcal{I}(S_i)}U^n_j$,
-      $U^n_{\min,i} = \min\limits_{j\in\mathcal{I}(S_i)}U^n_j$:
-      \begin{equation}
-         W_i^-\leq
-         U_i^{L,n+1}\leq
-         W_i^+\qquad\forall i \eqc
-      \end{equation}
-      \begin{equation}
-         W_i^\pm \equiv U_{\substack{\max\\\min},i}^n\left(
-         1-\frac{\dt}{M_{i,i}^L}
-         \sum\limits_j A\ij^L\right)
-         + \frac{\Delta t}{M_{i,i}^L}b_i^n \eqp
-      \end{equation}
-   \item For example, when there is no reaction term or source term, this reduces
-      to the following DMP, which implies the scheme is local extremum
-      diminishing (LED):
-      \begin{equation}
-         U^n_{\min,i}\leq
-         U_i^{L,n+1}\leq
-         U^n_{\max,i}\qquad\forall i \eqp
-      \end{equation}
-\end{itemize}
+As discussed in the introduction, the FCT algorithm employs a monotone,
+low-order scheme, although one does not actually compute the low-order
+solution in the algorithm. If one were to apply full limitation to
+the antidiffusive fluxes in the algorithm, one would obtain the low-order
+solution. In this way, the low-order scheme serves as a fail-safe in the FCT
+algorithm; if the antidiffusive fluxes in question would violate the imposed
+monotonicity bounds, then they are limited partially or in full. In this section,
+the low-order scheme for the scalar case is given.
+
+Monotonicity of the low-order
+scheme can be proven by proving that the system matrix of the scheme in
+the form $\mathbf{A}\solutionvector^{n+1}=\mathbf{b}$ is an M-matrix, i.e.,
+that it is an \emph{inverse-positive} matrix, also known as a \emph{monotone}
+matrix. The consequence of this property
+is the following: if $\mathbf{A}$ is an M-matrix and $\mathbf{b}$ is
+non-negative, then $\solutionvector^{n+1}$ is non-negative. Thus proving
+$\mathbf{A}$ is an M-matrix and $\mathbf{b}\geq 0$ proves the
+positivity-preservation property. It turns out that the M-matrix
+property of the system matrix property can be proven by
+lumping the mass matrix:
+$\consistentmassmatrix\rightarrow\lumpedmassmatrix$,
+and adding a low-order diffusion term
+$\loworderdiffusionmatrix$ (definition to be given shortly).
+Thus the low-order scheme is the following:
+\begin{equation}
+  \lumpedmassmatrix\frac{\solutionvector^{L,n+1}-\solutionvector^n}{\dt}
+    + (\ssmatrix + \diffusionmatrix^L)\solutionvector^n = \ssrhs^n \eqp
+\end{equation}
+
+The low-order diffusion matrix $\diffusionmatrix^L$ is designed to
+guarantee $D^L\ij \leq -A\ij, \quad j\ne i$
+This in turn is used to prove the M-matrix property of the system matrix.
+The definition used to give this property is now given.
+The diffusion matrix is assembled elementwise,
+where $K$ denotes an element, using a local bilinear form $b_K$ and a
+local low-order artificial viscosity $\nu_K^L$:
+\begin{equation}
+  D\ij^L = \sumKSij \nu_K^L b_K(\testfunction_j,\testfunction_i) \eqc
+\end{equation}
+and the local bilinear form is defined as follows, where $|K|$ denotes
+the volume of element $K$, $\mathcal{I}(K)$ is the set of indices
+corresponding to degrees of freedom with nonempty support on $K$, and
+$n_K$ is the cardinality of this set.
+\begin{equation}
+  b_K(\testfunction_j, \testfunction_i) \equiv \left\{\begin{array}{l l}
+    -\frac{1}{n_K - 1}\cellvolume & i\ne j, \quad i,j\in \mathcal{I}(K)\\
+    \cellvolume                   & i = j,  \quad i,j\in \mathcal{I}(K)\\
+    0                & i\notin\mathcal{I}(K)\,|\, j\notin\mathcal{I}(K)
+  \end{array}\right. \eqp
+\end{equation}
+Some useful properties of this bilinear form are
+$\sum\limits_j b_K(\testfunction_j, \testfunction_i) = 0$ and
+$b_K(\testfunction_i, \testfunction_i) > 0$.
+Finally, the low-order viscosity is defined as
+\begin{equation}
+  \lowordercellviscosity[\timeindex] \equiv \max\limits_{i\ne j\in\indicescell}
+  \frac{\max(0,\ssmatrixletter\ij^\timeindex)}
+  {-\mkern-20mu\sumKSij[T]\mkern-20mu\localviscbilinearform{T}{j}{i}}
+  \eqp
+\end{equation}
+
+In addition to guaranteeing monotonicity and positivity, the low-order
+viscous terms guarantee a discrete maximum principle (DMP), which amounts
+to locally bounding each solution degree of freedom from above and
+below. Not only is this a useful property in its own right, but it
+also turns out to be a useful tool in the FCT algorithm: it is
+used as the ``physically-motivated'' bounds to impose on the FCT
+solution. The DMP that is proved for the FE low-order scheme is
+the following, where $U^n_{\max,i} = \max\limits_{j\in\mathcal{I}(S_i)}U^n_j$,
+$U^n_{\min,i} = \min\limits_{j\in\mathcal{I}(S_i)}U^n_j$:
+\begin{subequations}\label{eq:dmp}
+\begin{equation}
+  W_i^-\leq
+  U_i^{L,n+1}\leq
+  W_i^+\qquad\forall i \eqc
+\end{equation}
+\begin{equation}
+  W_i^\pm \equiv U_{\substack{\max\\\min},i}^n\left(
+  1-\frac{\dt}{M_{i,i}^L}
+  \sum\limits_j A\ij^L\right)
+  + \frac{\Delta t}{M_{i,i}^L}b_i^n \eqp
+\end{equation}
+\end{subequations}
+Note that when there is no reaction term or source term, these bounds
+are readily identified as discrete local extremum diminishing (LED) bounds:
+\begin{equation}
+  U^n_{\min,i}\leq
+  U_i^{L,n+1}\leq
+  U^n_{\max,i}\qquad\forall i \eqp
+\end{equation}
+These LED bounds imply that if a degree of freedom $i$ is a local
+minimum / maximum, then it cannot shrink / grow. For the systems
+case, as opposed to this scalar case, there is no DMP available,
+and thus this LED criterion is used, although the basis for this
+is largely empirical rather than given by proof.
+
